# convertool

./: .gitignore  .prospector.yaml  Dockerfile  Dockerfile-base  README.md  install-hooks.sh  mypy.ini  pyproject.toml  stat_files.py
.github/workflows/: develop.yml  image-base.yml  image.yml  linting.yml  test.yml  tests.yml
config/: imagemagick_policy.xml  verapdf-autoinstall.xml
convertool/: __init__.py  cli.py  convert.py  convertool.py  exceptions.py  image.py  internals.py  libreoffice.py  msoffice.py  ods.py  symphony.py  util.py  utils.py
convertool/converters/: __init__.py  base.py  converter_audio.py  converter_cad.py  converter_copy.py  converter_document.py  converter_gis.py  converter_html.py  converter_image.py  converter_img.py  converter_msg.py  converter_pdf.py  converter_presentation.py  converter_spreadsheet.py  converter_symphovert.py  converter_templates.py  converter_tnef.py  converter_to_img.py  converter_to_pdf.py  converter_to_video.py  converter_video.py  exceptions.py
convertool/core/: __init__.py  convert.py  convert_map.json  image.py  internals.py  libreoffice.py  pdf.py  undecided.json  utils.py
convertool/core/replacements/: 4.tif  no_software.tif  password.tif
convertool/core/replacements/errors/: 1.tif  2.tif
convertool/database/: db.py
convertool/files/: docx_test.docx
convertool/lotus_user/user/: registrymodifications.xcu
convertool/lotus_user/user/autotext/: mytexts.bau
convertool/lotus_user/user/extensions/: buildid
convertool/lotus_user/user/extensions/bundled/registry/com.sun.star.comp.deployment.configuration.PackageRegistryBackend/: backenddb.xml  configmgr.ini
convertool/lotus_user/user/pack/: ExtensionInfo.pack  registrymodifications.pack
convertool/lotus_user/user/pack/autotext/: mytexts.pack
data/: encodings.json
docs/: README.md
src/convertool/: cli.py  convert.py  util.py
src/convertool/converters/: __init__.py  base.py  converter_audio.py  converter_cad.py  converter_copy.py  converter_document.py  converter_gis.py  converter_html.py  converter_image.py  converter_mdi.py  converter_msg.py  converter_msoffice.py  converter_pdf.py  converter_presentation.py  converter_sas.py  converter_spreadsheet.py  converter_symphovert.py  converter_templates.py  converter_tnef.py  converter_video.py  converter_xsl.py  converter_zipfile.py  exceptions.py
src/convertool/converters/resources/: __init__.py
src/convertool/converters/resources/medcom/: __init__.py  viewCommon.xsl  viewEmessage.xslt
src/convertool/converters/resources/medcom/XSLTs/2005/08/07/stylesheet/: viewEmessage.xsl
src/convertool/converters/resources/medcom/XSLTs/2006/07/01/stylesheet/: viewEmessage.xsl
src/convertool/converters/resources/medcom/XSLTs/2007/02/01/stylesheet/: WebReport.xsl  viewEmessage.xsl
src/convertool/converters/resources/medcom/XSLTs/2008/09/17/stylesheet/: viewEmessage.xsl
src/convertool/converters/resources/medcom/XSLTs/2011/02/17/stylesheet/: viewEmessage.xsl
src/convertool/converters/resources/medcom/XSLTs/2011/06/15/stylesheet/: WebReport.xsl  viewEmessage.xsl
src/convertool/converters/resources/medcom/XSLTs/2012/03/28/stylesheet/: viewEmessage.xsl
src/convertool/converters/resources/medcom/XSLTs/2014/10/08/stylesheet/: WebReport.xsl  viewEmessage.xsl
src/convertool/converters/resources/medcom/XSLTs/2015/02/16/stylesheet/: viewEmessage.xsl
src/convertool/converters/resources/medcom/XSLTs/2015/08/01/stylesheet/: viewEmessage.xsl
src/convertool/converters/resources/medcom/XSLTs/2016/04/28/stylesheet/: viewEmessage.xsl
src/convertool/converters/resources/medcom/XSLTs/2016/10/02/stylesheet/: viewEmessage.xsl
src/convertool/converters/resources/medcom/XSLTs/2016/12/01/stylesheet/: viewEmessage.xsl
src/convertool/converters/resources/medcom/XSLTs/2017/02/15/stylesheet/: WebReport.xsl  viewEmessage.xsl
src/convertool/converters/resources/medcom/XSLTs/2017/02/17/stylesheet/: viewEmessage.xsl
src/convertool/converters/resources/medcom/XSLTs/2017/05/01/stylesheet/: viewEmessage.xsl
src/convertool/converters/resources/medcom/XSLTs/2017/08/04/stylesheet/: WebReport.xsl  viewEmessage.xsl
tests/: conftest.py  test_audio.py  test_cli.py  test_convert.py  test_converter_abc.py  test_convertool.py  test_digiarch.py  test_document.py  test_exceptions.py  test_gis.py  test_html.py  test_image.py  test_img.py  test_internals.py  test_libreoffice.py  test_msg.py  test_pdf.py  test_presentation.py  test_sas.py  test_spreadsheet.py  test_symphony.py  test_symphovert.py  test_template.py  test_tnef.py  test_to_document.py  test_to_img.py  test_to_pdf.py  test_to_spreadsheet.py  test_util.py  test_utils.py  test_video.py  test_xsl.py  test_zipfile.py
tests/avid/MasterDocuments/: img-to-img.tif  text_to_img.txt
tests/avid/OriginalDocuments/: gis.id  gis.ind  html.html  medcom.xml  random  spreadsheet.csv  spreadsheet.xlsx  video.webm
tests/avid/OriginalDocuments/_metadata/: files.db
tests/avid/Schemas/localShared/: localSchema1.xsd
tests/avid/_metadata/: avid.db
tests/core/: test_convert.py  test_image.py  test_internals.py  test_libreoffice.py  test_pdf.py  test_utils.py
tests/database/: test_db.py
tests/files/: audio.m4a  document.docx  document.rtf  gis.map  gis.tab  presentation.pptx
tests/files/_metadata/: files.db
tests/reference/: gis.gml  gis.xsd  gix.gml  img-to-img.jp2  img-to-img.tif  medcom.html  message.html  message.txt  pdf-to-img-0.jp2  pdf-to-img-1.jp2  pdf-to-img.tif  template-corrupted.jpg.txt  template-not-convertable.jpg.txt  template-password-protected.jpg.txt  text_to_img.jp2  text_to_img.tif  winmail.html  winmail.txt
tests/test_data/: files.db  test_files.txt
tests/test_data/data/: test_doc.doc  test_docx.docx
tests/test_data/data/ppt/: test_ppt.ppt  test_pptx.pptx
(+10 files in other folders)
