[tool.poetry]
name = "convertool"
version = "0.3.0"
description = ""
authors = ["Nina Jensen <jnik@aarhus.dk>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1"
tqdm = "^4.51.0"
pillow = "^8.0.1"
humanize = "^3.1.0"
pydantic = "^1.6"
pdf2image = "^1.14.0"
acamodels = "^0.5.3"
databases = {extras = ["sqlite"], version = "^0.3.2"}


[tool.poetry.dev-dependencies]
pytest = "^6.1"
pytest-cov = "^2.10.1"
mypy = "^0.790"
black = {version = "^20.8b1", allow-prereleases = true}
flake8 = "^3.8.4"
reorder_python_imports = "^2.3.5"
pytest-asyncio = "^0.14.0"

[tool.poetry.scripts]
convertool = "convertool.cli:cli"

[tool.black]
line-length = 79
exclude = ".venv"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
