[tool.poetry]
name = "convertool"
version = "0.3.4"
description = ""
authors = ["Nina Jensen <jnik@aarhus.dk>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1"
tqdm = "^4.56.0"
pillow = "^8.1.0"
humanize = "^3.2.0"
pydantic = "^1.7"
pdf2image = "^1.14.0"
acamodels = "^0.5.3"
databases = {extras = ["sqlite"], version = "^0.4.1"}
sqlalchemy-views = "^0.2.4"


[tool.poetry.dev-dependencies]
pytest = "^6.2"
pytest-cov = "^2.11.1"
mypy = "^0.800"
black = {version = "^20.8b1", allow-prereleases = true}
flake8 = "^3.8.4"
reorder_python_imports = "^2.3.6"
pytest-asyncio = "^0.14.0"

[tool.poetry.scripts]
convertool = "convertool.cli:cli"

[tool.black]
line-length = 79
exclude = ".venv"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
