[tool.poetry]
name = "convertool"
version = "2.0.9"
description = ""
authors = ["Aarhus City Archive <stadsarkiv@aarhus.dk>"]
readme = "README.md"

[tool.poetry.scripts]
convertool = "convertool.cli:app"

[tool.poetry.dependencies]
python = "^3.11"
acacore = {git = "https://github.com/aarhusstadsarkiv/acacore.git", tag = "v3.3.1"}
tnefparse = "^1.4.0"
striprtf = "^0.0.26"
beautifulsoup4 = "^4.12.3"
lxml = "^5.3.0"
chardet = "^5.2.0"
extract-msg = "^0.50.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.2"
pytest = "^8.3.2"
coverage = "^7.6.1"
types-click = "^7.1.8"

[tool.ruff]
line-length = 120

[tool.ruff.format]
line-ending = "lf"

[tool.ruff.lint]
select = [
    "C",
    "E",
    "F",
    "W",
    # "B", Will ask for some refactoring of error handling
    "I",
    # "C90", Checks for complexity, might be good but not essential
    # "N", Will force us to redo the naming of several functions
    "D",
    "UP",
    "YTT",
    "ANN",
    # "S", Will help us have secure calls to sub.process and such, might be good
    "BLE",
    # "FBT", Will asks us to remove boolean flags
    "A",
    # "COM",
    "C4",
    "DTZ",
    "T10",
    "ISC",
    "ICN",
    "INP",
    "PIE",
    "PT",
    "RSE",
    "RET",
    "SIM",
    "TID",
    "ARG",
    "PLE",
    # "PLR", Will suggest several large refactoring
    "PLW",
    # "TRY", Will help with our exception handling
    "RUF",
]
ignore = [
    "E501",    # line to long, to many false positives, gets handled by black
    "ANN002",  # missing type anottation for *args
    "ANN003",  # missing type anotation for **kwargs
    "ANN101",  # missing type for self
    "ANN102",  # missing type for cls
    "ANN201",  # missing return type
    "ANN202",  # missing return type
    "ANN206",  # missing return type
    "ARG001",  # missing type anotattion for args
    "BLE001",  # catching general exceptions
    "D100",    # missing docstring
    "D101",    # missing docstring
    "D102",    # missing docstring
    "D103",    # missing docstring,
    "D104",    # missing docstring,
    "D105",    # missing docstring in magic method,
    "D106",    # missing docstring in nested class,
    "D107",    # missing docstring in __init__,
    "D203",    # 0 blank line required before class docstring,
    "D204",    # 1 blank line required after class docstring,
    "D212",    # multi-line docstring summary should start at the first line,
    "D213",    # multi-line docstring summary should start at the second line,
    "D300",    # use triple docstring
    "D401",    # first line of docstring should be in imperative mood
    "DTZ005",  # datetime.datetime.now() called without a tz argument
    "DTZ006",  # datetime.datetime.fromtimestamp() called without a tz argument
    "E712",    # comparison to True/False, we ignore because we use sqlalchemy
    "FBT001",  # boolean arguement in function definition
    "N802",    # name of function should be lower case
    "PLR2004", # magic value used in comparison
    "PT012",   # ptest.raises should contain a simple statement
    "RET505",  # unnecessary {branch} after return statement
    "RET506",  # unnecessary `elif` after `raise` statement
    "RET507",  # unnecessary `elif` after `continue` statement
    "S101",    # use of assert,
    "TRY003",  # avoid using long messages outside exception class
    "UP007",   # not using | in type anotations
    "INP001",  # implicit namespace without __init__ (throws errors in tests)
    "PLW2901", # redefing loop variables
    "C901",    # complexity check
    "ISC001",  # check for implicit concatanation of str on one line, not compatabil with black.
]
exclude = [
    ".venv",
    "env",
    "venv",
    ".git",
    "__pycache__",
    ".github",
    ".mypy_cache",
    ".pytest_cache",
    "__init__.py"
]

[tool.ruff.lint.isort]
combine-as-imports = false
force-single-line = true
order-by-type = false

[tool.ruff.lint.pydocstyle]
convention = "pep257"
ignore-decorators = ["pytest.fixture"]

[tool.ruff.lint.pycodestyle]
max-doc-length = 300

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
